# study

./: .gitignore  README.md
c-primer-plu-sixth-edition/: README.md
c-primer-plu-sixth-edition/ch01/: README.md  code1.1.c  code1.2.c
c-primer-plu-sixth-edition/ch02/: README.md  code2.1.c  code2.2.c  code2.3.c  code2.4.c  code2.5.c  pp2.1.c  pp2.2.c  pp2.3.c  pp2.4.c  pp2.5.c  pp2.6.c  (+2 more)
c-traps-and-pitfalls/: README.md
core-java-volume-i-fundamentals/: README.md
deep-learning-with-python/: ch02.ipynb  ch03.ipynb
expert-c-programming/: README.md
hands-on-machine-learning-with-scikit-learn-keras-and-tensorflow-second-edition/: README.md
machine-learning-in-action/: README.md
mastering-machine-learning-with-scikit-learn-second-edtion/: README.md
mastering-rust/ch14/postgres_demo/: Cargo.toml
mastering-rust/ch14/postgres_demo/src/: main.rs
modern-operating-systems-fourth-edition/: README.md
pointers-in-c/: README.md
tao-of-rust-codes/: README.md
tensorflow2/: code01.ipynb  code02.ipynb  code03.ipynb  code04.ipynb  code05.ipynb  code06.ipynb  code07.ipynb  code08.ipynb  code09.ipynb  code10.ipynb  code11.ipynb  code12.ipynb  code13.ipynb  code14.ipynb  code15.ipynb  code16.ipynb  code17.ipynb  code18.ipynb  code19.ipynb  code20.ipynb  code21.ipynb  code22.ipynb  code23.ipynb  code24.ipynb  code25.ipynb  code26.ipynb  code27.ipynb  code28.ipynb  code29.ipynb  code30.ipynb  code31.ipynb  code32.ipynb  code33.ipynb  code34.ipynb  code35.ipynb  code36.ipynb  code37.ipynb  code38.ipynb  code39.ipynb  code40.ipynb  (+17 more)
the-rust-programming-language/: README.md
(+1807 files in other folders)
