[package]
name = "postgres_demo"
version = "0.1.0"
authors = ["Akson <Akson.L@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.15.2"
serde = {version = "1.0.82"}
serde_derive = "1.0.82"
serde_json = "1.0.33"
